# MUL2024

./: CMakeLists.txt
src/: main.cpp  videoReader.cpp  videoReader.h
